# attention-tracker

./: CMakeLists.txt  README.md  package.xml
calib/: logitech-c920_640x360.ini
launch/: attention_tracking.launch
samples/: head_pose_estimation_single_frame.cpp  head_pose_estimation_test.cpp
share/: targets.json
src/: estimate_focus.cpp  expected_focus.cpp  head_pose_estimation.cpp  head_pose_estimation.hpp  head_pose_estimation_ros.cpp  ros_head_pose_estimator.cpp  ros_head_pose_estimator.hpp  withmeness.py
